--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,8 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  draggable_scrollable_lock_at_top_sheet:
-    path: ../
+  draggable_scrollable_lock_at_top_sheet: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
